--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
         <p>Hoje, percebo que o rastro de Ercília não apenas resistiu, como ainda viceja. Este projeto nasce do meu desejo de torná-lo ainda mais nítido e profundo. Quero levar o <strong>pensamento crítico</strong> inclusive a lugares onde ele raramente alcança, entregando a leitoras e leitores <strong>essas poderosas ferramentas de libertação de que se tratam os livros</strong>.</p>
         
-        <p>Iniciar esta corrente com <strong>"O Mito da Beleza" de Naomi Wolf</strong> é a minha forma de garantir que o rastro de Ercília seja visto, seguido e multiplicado. Escolhi esta obra como ponto de partida por sua capacidade de desmascarar as pressões estéticas que hoje funcionam como formas silenciosas de controle social, sendo o primeiro passo essencial para romper amarras como aquelas que foram combatidas pela minha tia-bisavó.</p>
+        <p>Iniciar esta corrente com <strong>"O Mito da Beleza" de Naomi Wolf</strong> é a minha forma de garantir que o rastro de Ercília seja visto, seguido e multiplicado. Escolhi esta obra como ponto de partida por sua capacidade de desmascarar as pressões estéticas que hoje funcionam como formas ardilosas de controle social, sendo o primeiro passo essencial para romper amarras como aquelas que foram combatidas pela minha tia-bisavó.</p>
     </section>
 
     <section class="wolf-section">
@@ -73,7 +73,7 @@
         <div class="stats-box">
             <strong>O Alerta no Brasil:</strong>
             <p style="margin-top: 10px; font-weight: normal;">
-                Em um país em que a mulher é extremamente objetificada e que lidera o ranking mundial em números de cirurgias plásticas, a leitura da obra de Wolf é um ato de autodefesa contra a mercantilização da nossa existência.
+                Em um país onde a mulher é extremamente objetificada e que lidera o ranking mundial em números de cirurgias plásticas, a leitura da obra de Wolf é um ato de autodefesa contra a mercantilização da nossa existência.
             </p>
         </div>
     </section>
@@ -110,4 +110,5 @@
 </footer>
 
 </body>
+
 </html>
