--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <path d="M10,50 Q25,20 40,50 T70,50 T100,20" fill="none" stroke="white" stroke-width="2" opacity="0.3"/>
         <path d="M10,60 Q25,30 40,60 T70,60 T100,30" fill="none" stroke="white" stroke-width="2" opacity="0.2"/>
     </svg>
+    <img src="Imagens/logo_fundo_transparente.png" class="logo-header-img" alt="Logo Rastro de Cobra">
     <h1>Rastro de Cobra</h1>
     <span class="subtitle">Livros que circulam, mentes que se libertam.</span>
 </header>
@@ -112,3 +113,4 @@
 </body>
 
 </html>
+
