--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--metadados para mensagens de Whatsapp e similares-->
+    <meta property="og:title" content="Rastro de Cobra">
+    <meta property="og:description" content="Ativismo Feminista Independente e Memória">
+    <meta property="og:image" content="Imagens/logo_fundo_transparente">
+    <meta property="og:url" content="rastrodecobra.com.br">
+    <meta property="og:type" content="website">
+    
     <title>Rastro de Cobra | Ativismo Feminista Independente e Memória</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
    
@@ -118,6 +126,7 @@
 </body>
 
 </html>
+
 
 
 
