--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <title>Rastro de Cobra | Ativismo Feminista Independente e Memória</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="icon" type="image/ico" href="Imagens/logo_fundo_transparente.ico">
    
 </head>
 
@@ -126,6 +127,7 @@
 </body>
 
 </html>
+
 
 
 
