--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--metadados para mensagens de Whatsapp e similares-->
     <meta property="og:title" content="Rastro de Cobra">
     <meta property="og:description" content="Ativismo Feminista Independente e Memória">
-    <meta property="og:image" content="Imagens/logo_fundo_transparente">
+    <meta property="og:image" content="Imagens/logo_fundo_transparente.png">
     <meta property="og:url" content="rastrodecobra.com.br">
     <meta property="og:type" content="website">
     
@@ -126,6 +126,7 @@
 </body>
 
 </html>
+
 
 
 
