--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <circle cx="95" cy="30" r="2" fill="var(--ocre)"/>
         </svg>
         <h2>Expanda a corrente</h2>
-        <p>Estenda por conta própria a corrente e conte aqui para a gente ou contribua para que mais exemplares de <em>O Mito da Beleza</em> entrem na corrente. Faça contato pelo e-mail:</p>
+        <p>Estenda por conta própria a corrente e conte aqui para a gente ou contribua para que mais exemplares de <em>O mito da beleza</em> entrem na corrente. Faça contato pelo e-mail:</p>
         <span class="e-mail">rastrodecobra@tutamail.com</span>
         
      </section>
@@ -126,6 +126,7 @@
 </body>
 
 </html>
+
 
 
 
