--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!--metadados para mensagens de Whatsapp e similares-->
     <meta property="og:title" content="Rastro de Cobra">
-    <meta property="og:description" content="Ativismo Feminista Independente e Memória">
+    <meta property="og:description" content="Rastro de Cobra - Ativismo Feminista Independente e Memória">
     <meta property="og:image" content="logo_og_image.png">
     <meta property="og:url" content="rastrodecobra.com.br">
     <meta property="og:type" content="website">
@@ -126,6 +126,7 @@
 </body>
 
 </html>
+
 
 
 
