--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <section class="card-zine" style="text-align: center; box-shadow: 15px 15px 0px var(--vinho-vivo);">
         <h2 style="font-size: 2rem; margin-bottom: 1.5rem;">Você entrou nesta corrente de leitura do livro 'O mito da beleza'?</h2>
-        <p>Ajude-nos a mapear o rastro desta obra. Assim como nos museus, queremos registrar sua presença nesta jornada literária.</p>
+        <p>Ajude-nos a mapear o rastro desta corrente. Queremos registrar sua presença nesta jornada literária.</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdmrnGZ8poCesy5iP-T46-_MJ5ROpZGhBznsiDPENFOTT1CBQ/viewform?usp=publish-editor" 
            target="_blank" 
            style="display: inline-block; background: var(--vinho-vivo); color: white; padding: 1rem 2rem; text-decoration: none; font-family: 'Special Elite', cursive; border-radius: 5px; margin-top: 10px; border: 2px solid var(--vinho-vivo); transition: 0.3s;">
@@ -128,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
