--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
         </div>
     </section>
 
+    <section class="card-zine" style="text-align: center; box-shadow: 15px 15px 0px var(--vinho-vivo);">
+        <h2 style="font-size: 2.5rem; margin-bottom: 1.5rem;">Você entrou nesta corrente?</h2>
+        <p>Ajude-nos a mapear o rastro desta obra. Queremos registrar sua presença nesta jornada literária.</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeyx49cZ4DBNncEtF6-BSJZwGOkI_-izmJvPrcKtAHB6fL3Fw/viewform?usp=publish-editor" 
+           target="_blank" 
+           style="display: inline-block; background: var(--vinho-vivo); color: white; padding: 1rem 2rem; text-decoration: none; font-family: 'Special Elite', cursive; border-radius: 5px; margin-top: 10px; border: 2px solid var(--vinho-vivo); transition: 0.3s;">
+           REGISTRAR MINHA PRESENÇA NA CORRENTE
+        </a>
+    </section>
+    
     <section class="e-mail-area">
         <svg class="snake-svg" viewBox="0 0 100 40" style="margin-bottom: 10px;">
             <path d="M10,30 C30,30 30,10 50,10 C70,10 70,30 90,30" fill="none" stroke="var(--ocre)" stroke-width="4" stroke-linecap="round"/>
@@ -126,6 +136,7 @@
 </body>
 
 </html>
+
 
 
 
